@@ -1,3 +1,8 @@
+(01/07/14)
+==========
+
+· Added Emulators > Uae4all2 (Amiga)
+
 (27/06/14)
 ==========
 
